--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
-    apply plugin: 'com.google.gms.google-services'
     implementation platform('com.google.firebase:firebase-bom:29.3.0')
+    apply plugin: 'com.google.gms.google-services'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.material:material:1.7.0-alpha01'
     implementation 'com.firebaseui:firebase-ui-database:8.0.1'
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
@@ -41,7 +42,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'com.google.firebase:firebase-database:20.0.4'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
@@ -51,6 +52,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.jd-alexander:library:1.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
