--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
