--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,9 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
+    implementation 'com.google.zxing:core:3.3.2'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+
 }
